k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hangry-home
  labels:
    name: hangry-home
    app: hangry-home
