k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hangry-home-client
  namespace: hangry-home
spec:
  selector:
    app: hangry-home-client
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hangry-home-server
  namespace: hangry-home
spec:
  selector:
    app: hangry-home-server
  ports:
    - name: http
      port: 4000
      targetPort: 4000
    - name: sse
      port: 4001
      targetPort: 4001
